--- a/midterm/35.html
+++ b/midterm/35.html
@@ -59,18 +59,16 @@ body{font-family: Arial, Helvetica, sans-serif;}
 <div id="mySidenav" class="sidenav">
   <a href="javascript:void(0)" class="closebtn" onclick="closeNav()">&times;</a>
   <a href="https://chia-yun-chang.github.io/wp108b/1/hw.html" target="_blank">About</a> 
-  <a href="#">Siberian husky</a>
-  <a href="#">Tibetan mastiff</a>
-  <a href="#">golden retriever</a>
-  <a href="#">poodle</a>
-  <a href="#">samoyed</a>
-  <a href="#">pomeranian</a>
-  <a href="#">miniature schnauzerterrier</a>
-  <a href="#">rough collie</a>
-  <a href="#">chow chow</a>
-  <a href="#">chihuahua</a>
-  <a href="#">old english sheepdog</a>
-  <a href="#">bordercollie</a>
+  <a href="https://chia-yun-chang.github.io/wp108b/midterm/a.html">Siberian husky</a>
+  <a href="https://chia-yun-chang.github.io/wp108b/midterm/b.html">Tibetan mastiff</a>
+  <a href="https://chia-yun-chang.github.io/wp108b/midterm/c.html">Golden retriever</a>
+  <a href="https://chia-yun-chang.github.io/wp108b/midterm/d.html">Poodle</a>
+  <a href="https://chia-yun-chang.github.io/wp108b/midterm/e.html">Samoyed</a>
+  <a href="https://chia-yun-chang.github.io/wp108b/midterm/f.html">Pomeranian</a>
+  <a href="https://chia-yun-chang.github.io/wp108b/midterm/g.html">Miniature Schnauzer Terrier</a>
+  <a href="https://chia-yun-chang.github.io/wp108b/midterm/h.html">Rough Collie</a>
+  <a href="https://chia-yun-chang.github.io/wp108b/midterm/i.html">Old English Sheepdog</a>
+  <a href="https://chia-yun-chang.github.io/wp108b/midterm/j.html">Bordercollie</a>
   
 </div>
 
