--- a/midterm/dog/e.html
+++ b/midterm/dog/e.html
@@ -3,18 +3,14 @@
 <head>
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <body bgcolor="#111111">
-</style>
+  <link href="all.css" rel="stylesheet" type ="text/css">
 </head>
 <body>
-<h1 style="text-align:center;color:#ffffff"> Samoyed:</h1>
-<div style="border-top:1px dashed #cccccc;height: 1px;overflow:hidden"></div>
-<p style="text-align:center;color:#ffffff">
-It is a dog breed bred by the Siberian aboriginal Samoyed people. Because he looks like he is always smiling and likes to be close to people, he is called "Smile Angel".
-In addition to his moderate personality, he is also known for his patience and robustness. It was originally used for pulling sleds and guarding reindeer, and was also used by Western explorers to engage in polar expeditions.</p></br>
-<div style="border-top:1px dashed #cccccc;height: 1px;overflow:hidden"></div></br>
-<p Align=center>
-<img src="https://usercontent1.hubstatic.com/14009216_f1024.jpg" width="350" height="250">
-</P>
+ <h1>Samoyed:</h1>
+ <div></div>
+ <h3>
+  It is a dog breed bred by the Siberian aboriginal Samoyed people. Because he looks like he is always smiling and likes to be close to people, he is called "Smile Angel".
+  In addition to his moderate personality, he is also known for his patience and robustness. It was originally used for pulling sleds and guarding reindeer, and was also used by Western explorers to engage in polar expeditions.</p></br><p Align="center">
+ <img src="https://usercontent1.hubstatic.com/14009216_f1024.jpg" width="350" height="250">
 </body>
 </html>
