--- a/midterm/dog/h.html
+++ b/midterm/dog/h.html
@@ -3,17 +3,14 @@
 <head>
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <body bgcolor="#111111">
-</style>
+  <link href="all.css" rel="stylesheet" type ="text/css">
 </head>
 <body>
-<h1 style="text-align:center;color:#ffffff">Rough Collie:</h1>
-<div style="border-top:1px dashed #cccccc;height: 1px;overflow:hidden"></div>
-<p style="text-align:center;color:#ffffff">
-The Rough Collie is a long-coated dog breed of medium to large size that, in its original form, was a type of collie used and bred for herding sheep in Scotland. Originating in the 1800s, the breed is now well known through the works of author Albert Payson Terhune, beginning with books about Lad, and through Lassie novels, movies, and television shows. Rough Collies generally come in shades of sable and white, blue merle, tri-colored, and white. The breed has a distinctive long tapered snout and tipped ears.</p></br>
-<div style="border-top:1px dashed #cccccc;height: 1px;overflow:hidden"></div></br>
-<p Align=center>
-<img src="https://i.pinimg.com/originals/6e/ba/3c/6eba3c774aa841d0e5cb3c7cfda4aa18.jpg" width="280" height="250">
-</P>
+ <h1>Rough Collie:</h1>
+ <div></div>
+ <h3>
+  The Rough Collie is a long-coated dog breed of medium to large size that, in its original form, was a type of collie used and bred for herding sheep in Scotland. Originating in the 1800s, the breed is now well known through the works of author Albert Payson Terhune, beginning with books about Lad, and through Lassie novels, movies, and television shows. Rough Collies generally come in shades of sable and white, blue merle, tri-colored, and white. The breed has a distinctive long tapered snout and tipped ears.</p></br>
+ <p Align=center>
+ <img src="https://i.pinimg.com/originals/6e/ba/3c/6eba3c774aa841d0e5cb3c7cfda4aa18.jpg" width="250" height="280">
 </body>
 </html>
