--- a/midterm/dog/d.html
+++ b/midterm/dog/d.html
@@ -3,17 +3,14 @@
 <head>
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <body bgcolor="#111111">
-</style>
+  <link href="all.css" rel="stylesheet" type ="text/css">
 </head>
 <body>
-<h1 style="text-align:center;color:#ffffff"> Poodle:</h1>
-<div style="border-top:1px dashed #cccccc;height: 1px;overflow:hidden"></div>
-<p style="text-align:center;color:#ffffff">
-Poodles come in many colors and originally originated in Germany. The name comes from the German "Pudelhund" and breeds in France. In 1936, FCI recognized France as the birthplace of dogs of this breed. Originally, the dog breed was a type of water hound. Later, it was renamed the poodle because it was raised by noble women during the period of Louis XIV.</p></br>
-<div style="border-top:1px dashed #cccccc;height: 1px;overflow:hidden"></div></br>
-<p Align=center>
-<img src="https://encrypted-tbn0.gstatic.com/images?q=tbn%3AANd9GcR8GoTTcT3AKW_CAbvWfXkyEKHv4eZ-vUMN16tO2LQh9D7yBeCj&usqp=CAU" width="350" height="250">
-</P>
+ <h1>Poodle:</h1>
+ <div></div>
+ <h3>
+  Poodles come in many colors and originally originated in Germany. The name comes from the German "Pudelhund" and breeds in France. In 1936, FCI recognized France as the birthplace of dogs of this breed. Originally, the dog breed was a type of water hound. Later, it was renamed the poodle because it was raised by noble women during the period of Louis XIV.</p></br>
+ <p Align="center">
+ <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn%3AANd9GcR8GoTTcT3AKW_CAbvWfXkyEKHv4eZ-vUMN16tO2LQh9D7yBeCj&usqp=CAU" width="350" height="250">
 </body>
 </html>
