--- a/midterm/35.html
+++ b/midterm/35.html
@@ -9,16 +9,16 @@
 <div id="mySidenav" class="sidenav">
   <a href="javascript:void(0)" class="closebtn" onclick="closeNav()">&times;</a>
   <a href="https://chia-yun-chang.github.io/wp108b/1/hw.html" target="_blank">About</a> 
-  <a href="https://chia-yun-chang.github.io/wp108b/midterm/a.html">Siberian husky</a>
-  <a href="https://chia-yun-chang.github.io/wp108b/midterm/b.html">Tibetan mastiff</a>
-  <a href="https://chia-yun-chang.github.io/wp108b/midterm/c.html">Golden retriever</a>
-  <a href="https://chia-yun-chang.github.io/wp108b/midterm/d.html">Poodle</a>
-  <a href="https://chia-yun-chang.github.io/wp108b/midterm/e.html">Samoyed</a>
-  <a href="https://chia-yun-chang.github.io/wp108b/midterm/f.html">Pomeranian</a>
-  <a href="https://chia-yun-chang.github.io/wp108b/midterm/g.html">Miniature Schnauzer Terrier</a>
-  <a href="https://chia-yun-chang.github.io/wp108b/midterm/h.html">Rough Collie</a>
-  <a href="https://chia-yun-chang.github.io/wp108b/midterm/i.html">Old English Sheepdog</a>
-  <a href="https://chia-yun-chang.github.io/wp108b/midterm/j.html">Bordercollie</a>
+  <a href="https://chia-yun-chang.github.io/wp108b/midterm/dog/a.html">Siberian husky</a>
+  <a href="https://chia-yun-chang.github.io/wp108b/midterm/dog/b.html">Tibetan mastiff</a>
+  <a href="https://chia-yun-chang.github.io/wp108b/midterm/dog/c.html">Golden retriever</a>
+  <a href="https://chia-yun-chang.github.io/wp108b/midterm/dog/d.html">Poodle</a>
+  <a href="https://chia-yun-chang.github.io/wp108b/midterm/dog/e.html">Samoyed</a>
+  <a href="https://chia-yun-chang.github.io/wp108b/midterm/dog/f.html">Pomeranian</a>
+  <a href="https://chia-yun-chang.github.io/wp108b/midterm/dog/g.html">Miniature Schnauzer Terrier</a>
+  <a href="https://chia-yun-chang.github.io/wp108b/midterm/dog/h.html">Rough Collie</a>
+  <a href="https://chia-yun-chang.github.io/wp108b/midterm/dog/i.html">Old English Sheepdog</a>
+  <a href="https://chia-yun-chang.github.io/wp108b/midterm/dog/j.html">Bordercollie</a>
 </div>
 
 <div class="navbar">
