--- a/midterm/dog/a.html
+++ b/midterm/dog/a.html
@@ -6,6 +6,7 @@
   <link href="all.css" rel="stylesheet" type ="text/css">
 </head>
 <body>
+ <a href="javascript:history.back()">回上一頁</a>
  <h1> Siberian Husky:</h1>
  <div></div>
  <h3>
