--- a/midterm/dog/a.html
+++ b/midterm/dog/a.html
@@ -5,8 +5,8 @@
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link href="all.css" rel="stylesheet" type ="text/css">
 </head>
+<input type ="button" onclick="history.back()" value="回到上一頁"></input>
 <body>
- <a href="javascript:history.back()">回上一頁</a>
  <h1> Siberian Husky:</h1>
  <div></div>
  <h3>
