--- a/midterm/dog/d.html
+++ b/midterm/dog/d.html
@@ -5,6 +5,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link href="all.css" rel="stylesheet" type ="text/css">
 </head>
+<input type ="button" onclick="history.back()" value="回到上一頁"></input>
 <body>
  <h1>Poodle:</h1>
  <div></div>
