--- a/1/hw.html
+++ b/1/hw.html
@@ -6,7 +6,6 @@
 <body bgcolor="#111111">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
-
 <img src="https://media-exp1.licdn.com/dms/image/C4E1BAQGNHAbH2lBeNw/company-background_10000/0?e=2159024400&v=beta&t=pCkWfQWoYOtrPSD6TQizWD1sx9oz43a8YV7dxjGo83s" style="display:block; margin:auto;" width="450" height="125">
 
 <section>
@@ -37,5 +36,6 @@
 <address>
 <p style="text-align:center;color:#ffffff;">Some people are worth melting for.</p>
 </address>
+<input type ="button" onclick="history.back()" value="BACK"></input>
 
 </html>
