--- a/midterm/35.html
+++ b/midterm/35.html
@@ -22,7 +22,7 @@
 </div>
 
 <div class="navbar">
-  <a href="#home">Home</a>
+  <a href="#home">Exit</a>
 </div>
 
  <span onclick="openNav()">&#9826;</span>
