--- a/midterm/dog/j.html
+++ b/midterm/dog/j.html
@@ -5,7 +5,6 @@
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link href="all.css" rel="stylesheet" type ="text/css">
 </head>
-<input type ="button" onclick="history.back()" value="回到上一頁"></input>
 <body>
  <h1>Border Collie:</h1>
  <div></div>
@@ -14,5 +13,6 @@
   According to media reports in January 2011, there is a border collie who can roughly understand 1,022 human vocabulary and can make correct responses and actions based on these commands."</div></br>
  <p Align=center>
  <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn%3AANd9GcQqjcLxlf-lzxqYenzbaFgljka9iBD83QyBDtIg54SsASLfIV6K&usqp=CAU" width="400" height="225">
+ <input type ="button" onclick="history.back()" value="BACK"></input>
 </body>
 </html>
