--- a/midterm/dog/c.html
+++ b/midterm/dog/c.html
@@ -5,7 +5,6 @@
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link href="all.css" rel="stylesheet" type ="text/css">
 </head>
-<input type ="button" onclick="history.back()" value="回到上一頁"></input>
  <body>
  <h1>Golden Retriever:</h1>
  <div></div>
@@ -13,5 +12,6 @@
   Like the Labrador Retriever, Golden Retriever has outstanding intelligence, affection for people, and their tolerance for children. On the other hand, they need people to stay with them to be happy. They perform well in obedience tests and are excellent guide dogs. Although they may not perform well in the field trial like the Labrador Retriever, they are excellent hunters and are known for their outstanding sense of smell. They are also very eager to please their owners.</p></br>
  <p Align="center">
  <img src="https://upload.wikimedia.org/wikipedia/commons/b/b0/Golden_Retriever_Buddy_0311.jpg" width="350" height="300">
+ <input type ="button" onclick="history.back()" value="BACK"></input>
 </body>
 </html>
