--- a/midterm/dog/d.html
+++ b/midterm/dog/d.html
@@ -5,7 +5,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link href="all.css" rel="stylesheet" type ="text/css">
 </head>
-<input type ="button" onclick="history.back()" value="回到上一頁"></input>
+
 <body>
  <h1>Poodle:</h1>
  <div></div>
@@ -13,5 +13,6 @@
   Poodles come in many colors and originally originated in Germany. The name comes from the German "Pudelhund" and breeds in France. In 1936, FCI recognized France as the birthplace of dogs of this breed. Originally, the dog breed was a type of water hound. Later, it was renamed the poodle because it was raised by noble women during the period of Louis XIV.</p></br>
  <p Align="center">
  <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn%3AANd9GcR8GoTTcT3AKW_CAbvWfXkyEKHv4eZ-vUMN16tO2LQh9D7yBeCj&usqp=CAU" width="350" height="250">
+<input type ="button" onclick="history.back()" value="BACK"></input>
 </body>
 </html>
