--- a/midterm/dog/h.html
+++ b/midterm/dog/h.html
@@ -5,7 +5,6 @@
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link href="all.css" rel="stylesheet" type ="text/css">
 </head>
-<input type ="button" onclick="history.back()" value="回到上一頁"></input>
 <body>
  <h1>Rough Collie:</h1>
  <div></div>
@@ -13,5 +12,6 @@
   The Rough Collie is a long-coated dog breed of medium to large size that, in its original form, was a type of collie used and bred for herding sheep in Scotland. Originating in the 1800s, the breed is now well known through the works of author Albert Payson Terhune, beginning with books about Lad, and through Lassie novels, movies, and television shows. Rough Collies generally come in shades of sable and white, blue merle, tri-colored, and white. The breed has a distinctive long tapered snout and tipped ears.</p></br>
  <p Align=center>
  <img src="https://i.pinimg.com/originals/6e/ba/3c/6eba3c774aa841d0e5cb3c7cfda4aa18.jpg" width="250" height="280">
+ <input type ="button" onclick="history.back()" value="BACK"></input>
 </body>
 </html>
