--- a/midterm/dog/c.html
+++ b/midterm/dog/c.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="zh-en"> 
 <head>
-  <meta charset="utf-8" />
+  <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link href="all.css" rel="stylesheet" type ="text/css">
 </head>
