--- a/midterm/dog/a.html
+++ b/midterm/dog/a.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="zh-en"> 
 <head>
-  <meta charset="utf-8" />
+  <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link href="all.css" rel="stylesheet" type ="text/css">
 </head>
@@ -12,6 +12,6 @@
   The eyes of Siberian Husky are usually brown, light brown or blue. Light blue winks are a common wink, but there are exceptions. A dog may have one eye brown or light brown, while the other is blue, this phenomenon is called "bi-eyed"; or one eye is blue and the iris of the other eye is mixed The colored, iris heterochromia, is called "parti-eyed" by lovers of Siberian huskies. Among the dog breeds commonly supported by people, the Siberian Husky is a rare breed with two eyes that can have different colors. At the same time, it is also one of the few dog breeds whose eyes are generally blue.</h3></br>
  <p Align="center">
  <img src="https://d1941uuft27pfg.cloudfront.net/breed-uploads/2018/08/siberian-husky-detail.jpg?bust=1535566590&width=355" style="display:block; margin:auto;" width="400" height="300">
- <input type ="button" onclick="history.back()" value="BACK"></input>
+ <input type ="button" onclick="history.back()" value="BACK"></input></P>
 </body>
 </html>
