--- a/1/hw.html
+++ b/1/hw.html
@@ -31,7 +31,7 @@
 </article>
 </section>
 <hr>
-<img src="https://static.techspot.com/images2/downloads/topdownload/2015/06/facebook-lite.png" style="display:block; margin:auto;"width="50" height="50" />
+<a href="https://www.facebook.com"><img src="https://static.techspot.com/images2/downloads/topdownload/2015/06/facebook-lite.png" border="0" style="display:block; margin:auto;"width="50" height="50"></a>
 <hr>
 <address>
 <p style="text-align:center;color:#ffffff;">Some people are worth melting for.</p>
