--- a/midterm/35.html
+++ b/midterm/35.html
@@ -9,9 +9,9 @@
 <div id="mySidenav" class="sidenav">
   <a href="javascript:void(0)" class="closebtn" onclick="closeNav()">&times;</a>
   <a href="https://chia-yun-chang.github.io/wp108b/1/hw.html" target="_blank">About</a> 
-  <a href="https://chia-yun-chang.github.io/wp108b/midterm/dog/a.html">Siberian husky</a>
-  <a href="https://chia-yun-chang.github.io/wp108b/midterm/dog/b.html">Tibetan mastiff</a>
-  <a href="https://chia-yun-chang.github.io/wp108b/midterm/dog/c.html">Golden retriever</a>
+  <a href="https://chia-yun-chang.github.io/wp108b/midterm/dog/a.html">Siberian Husky</a>
+  <a href="https://chia-yun-chang.github.io/wp108b/midterm/dog/b.html">Tibetan Mastiff</a>
+  <a href="https://chia-yun-chang.github.io/wp108b/midterm/dog/c.html">Golden Retriever</a>
   <a href="https://chia-yun-chang.github.io/wp108b/midterm/dog/d.html">Poodle</a>
   <a href="https://chia-yun-chang.github.io/wp108b/midterm/dog/e.html">Samoyed</a>
   <a href="https://chia-yun-chang.github.io/wp108b/midterm/dog/f.html">Pomeranian</a>
