--- a/1/hw.html
+++ b/1/hw.html
@@ -21,7 +21,7 @@
 
  <div style="border-top:1px dashed #cccccc;height: 1px;overflow:hidden"></div>
  
-<img src="https://www.nasa.gov/specials/blackmarble/media/BlackMarble_2016_Asia_composite.png" style="float:right;" width="168" height="138" />
+<img src="https://www.nasa.gov/sites/default/files/styles/1x1_cardfeed/public/images/746963main_pia17009-full_full.jpg" style="float:right;" width="168" height="138" />
 <h2 style="color:#ffffff;">Interest:</h2>
 <ol>
      <li div style="color:#ffffff;">Make some dessert.</li>
