--- a/midterm/index.html
+++ b/midterm/index.html
@@ -3,7 +3,8 @@
 <head>
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <link href="css.css" rel="stylesheet" type ="text/css">
+  <link href="index.css" rel="stylesheet" type ="text/css">
+  <script src="./midterm/index.js"></script>
 </head>
 <body>
 <div id="mySidenav" class="sidenav">
@@ -26,12 +27,7 @@
 </div>
 
 <span onclick="openNav()">&#9826;</span>
-<script>
- function openNav() {
-  document.getElementById("mySidenav").style.width = "250px";}
- function closeNav() {
-  document.getElementById("mySidenav").style.width = "0";}
- </script>
+
 
  <h2>Dogs Introduction:</h2>
  <div class="line"></div>
