--- a/midterm/index.html
+++ b/midterm/index.html
@@ -4,7 +4,6 @@
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link href="index.css" rel="stylesheet" type ="text/css">
-  <script src="./midterm/index.js"></script>
 </head>
 <body>
 <div id="mySidenav" class="sidenav">
@@ -27,7 +26,7 @@
 </div>
 
 <span onclick="openNav()">&#9826;</span>
-
+<script src="./index.js" type="text/javascript"></script>
 
  <h2>Dogs Introduction:</h2>
  <div class="line"></div>
