--- a/midterm/dog/e.html
+++ b/midterm/dog/e.html
@@ -10,7 +10,9 @@
  <div></div>
  <h3>
   It is a dog breed bred by the Siberian aboriginal Samoyed people. Because he looks like he is always smiling and likes to be close to people, he is called "Smile Angel".
-  In addition to his moderate personality, he is also known for his patience and robustness. It was originally used for pulling sleds and guarding reindeer, and was also used by Western explorers to engage in polar expeditions.</p></br><p Align="center">
+  In addition to his moderate personality, he is also known for his patience and robustness. It was originally used for pulling sleds and guarding reindeer, and was also used by Western explorers to engage in polar expeditions.
+ </h3><br>
+ <p Align="center">
  <img src="https://usercontent1.hubstatic.com/14009216_f1024.jpg" width="350" height="250">
  <input type ="button" onclick="history.back()" value="BACK"></input>
 </body>
