--- a/midterm/dog/j.html
+++ b/midterm/dog/j.html
@@ -10,7 +10,8 @@
  <div></div>
  <h3>
   The border collie is a kind of shepherd dog originally from Scotland. It mainly assists in grazing on the farm and knows how to control the flock with eyes. It is the most common breed of Scottish shepherd dog. Border collies are known for their vigorous energy, physique, and easy to learn acrobatics, but sometimes too excited will produce some neuroticism. They are considered to be the smartest dog breeds in academia. The IQ is about the same as the IQ of six- and seven-year-old children, so it is often bright and dominant in canine competitions and collie competitions.
-  According to media reports in January 2011, there is a border collie who can roughly understand 1,022 human vocabulary and can make correct responses and actions based on these commands.</div></br>
+  According to media reports in January 2011, there is a border collie who can roughly understand 1,022 human vocabulary and can make correct responses and actions based on these commands.
+ </h3><br>
  <p Align=center>
  <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn%3AANd9GcQqjcLxlf-lzxqYenzbaFgljka9iBD83QyBDtIg54SsASLfIV6K&usqp=CAU" width="400" height="225">
  <input type ="button" onclick="history.back()" value="BACK"></input>
