--- a/midterm/index.html
+++ b/midterm/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="zh-en">
 <head>
-  <meta charset="utf-8" />
+  <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link href="index.css" rel="stylesheet" type ="text/css">
 </head>
@@ -25,7 +25,7 @@
  </div>
  <span onclick="openNav()">&#9826;</span>
  <script src="./index.js" type="text/javascript"></script>
- <h2>Dogs Introduction:</h2>
+ <h1>Dogs Introduction:</h1>
  <div class="line"></div>
  <h2>Origin:</h2>
  <p>The origin of the domestic dog includes the dog's evolutionary divergence from the wolf, its domestication, and its development into dog types and dog breeds. The dog is a member of the genus Canis, which forms part of the wolf-like canids, and was the first species and the only large carnivore to have been domesticated. The dog and the extant gray wolf are sister taxa, as modern wolves are not closely related to the population of wolves that was first domesticated.</p></br>
