--- a/midterm/dog/i.html
+++ b/midterm/dog/i.html
@@ -10,7 +10,8 @@
  <div></div>
  <h3>
   The ancient British shepherd is a breed of dog breeded for the purpose of grazing domestic animals and pets. The ancient British shepherd is characterized by long gray hair and eye-covered hair on the head.
-  The puppies are born covered with panda-like pure black and pure white short hairs, and the silver-gray long hairs will appear only after the puppies are removed. If the country allows by law, usually the tail of the ancient shepherd dog will fracture at the first tail when the puppies. This approach will produce a panda-like tail, inserted or docked in English. Because many countries prohibit this kind of habit, ancient shepherd dogs without tail cutting are becoming more and more common. At present, the British Dog Breeding Club does not encourage the legal correction of the tails of ancient shepherd dogs. It only requires supplementary dogs to have their tails broken."</div></br>
+  The puppies are born covered with panda-like pure black and pure white short hairs, and the silver-gray long hairs will appear only after the puppies are removed. If the country allows by law, usually the tail of the ancient shepherd dog will fracture at the first tail when the puppies. This approach will produce a panda-like tail, inserted or docked in English. Because many countries prohibit this kind of habit, ancient shepherd dogs without tail cutting are becoming more and more common. At present, the British Dog Breeding Club does not encourage the legal correction of the tails of ancient shepherd dogs. It only requires supplementary dogs to have their tails broken.
+ </h3><br>
  <p Align=center>
  <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn%3AANd9GcToHnA66yRLGDIDhTnobqihy-8MF9CV7aJyu_nQ79GWM2uTO1hr&usqp=CAU" width="400" height="300">
  <input type ="button" onclick="history.back()" value="BACK"></input>
