--- a/1/hw.html
+++ b/1/hw.html
@@ -1,41 +1,31 @@
 <!DOCTYPE html>
-<html>
-
-<html lang="zh-TW“>
-<meta charset="UTF-8">
-<body bgcolor="#111111">
-<meta name="viewport" content="width=device-width, initial-scale=1.0">
-
+<html lang="zh-en">
+<head>
+  <meta charset="utf-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1">
+  <link href="index.css" rel="stylesheet" type ="text/css">
+</head>
+<body style="background-color:#111111;">
 <img src="https://media-exp1.licdn.com/dms/image/C4E1BAQGNHAbH2lBeNw/company-background_10000/0?e=2159024400&v=beta&t=pCkWfQWoYOtrPSD6TQizWD1sx9oz43a8YV7dxjGo83s" style="display:block; margin:auto;" width="450" height="125">
-
-<section>
-
-   <h1 style="color:#ffffff;">Introduction:</h1>
-
- <article>
-     <p div style="text-align:center;color:#ffffff;">CHANG,CHIA-YUN</p>
-     <p div style="text-align:center;color:#ffffff;">I am born in Kaohsiung</p>
-     <p div style="text-align:center;color:#ffffff;">Graduated from Kaohsiung Municipal 
-        ChungShan Senior High School</p>
-     <p div style="text-align:center;color:#ffffff;">Currently studying at National Quemoy University.</p>
-
- <div style="border-top:1px dashed #cccccc;height: 1px;overflow:hidden"></div>
- 
+ <h1 style="color:#ffffff;">Introduction:</h1>
+   <p div style="text-align:center;color:#ffffff;">CHANG,CHIA-YUN</p>
+   <p div style="text-align:center;color:#ffffff;">I am born in Kaohsiung</p>
+   <p div style="text-align:center;color:#ffffff;">Graduated from Kaohsiung Municipal ChungShan Senior High School</p>
+   <p div style="text-align:center;color:#ffffff;">Currently studying at National Quemoy University.</p>
+<div style="border-top:1px dashed #cccccc;height: 1px;overflow:hidden"></div>
 <img src="https://www.nasa.gov/sites/default/files/styles/1x1_cardfeed/public/images/746963main_pia17009-full_full.jpg" style="float:right;" width="168" height="138" />
 <h2 style="color:#ffffff;">Interest:</h2>
 <ol>
-     <li div style="color:#ffffff;">Make some dessert.</li>
-     <li div style="color:#ffffff;">Play volleyball.</li>
-     <li div style="color:#ffffff;">Listen music ex. GEM. Taylor Swift ...</li>
-<ol>
-</article>
-</section>
+   <li div style="color:#ffffff;">Make some dessert.</li>
+   <li div style="color:#ffffff;">Play volleyball.</li>
+   <li div style="color:#ffffff;">Listen music ex. GEM. Taylor Swift ...</li>
+</ol>
 <hr>
 <a href="https://www.facebook.com"><img src="https://static.techspot.com/images2/downloads/topdownload/2015/06/facebook-lite.png" border="0" style="display:block; margin:auto;"width="50" height="50"></a>
 <hr>
 <address>
-<p style="text-align:center;color:#ffffff;">Some people are worth melting for.</p>
+ <p style="text-align:center;color:#ffffff;">Some people are worth melting for.</p>
 </address>
 <input type ="button" onclick="history.back()" value="BACK"></input>
-
+</body>
 </html>
