--- a/1/hw.html
+++ b/1/hw.html
@@ -3,25 +3,25 @@
 <head>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <link href="index.css" rel="stylesheet" type ="text/css">
+  <link href="hw.css" rel="stylesheet" type ="text/css">
 </head>
-<body style="background-color:#111111;">
-<img src="https://media-exp1.licdn.com/dms/image/C4E1BAQGNHAbH2lBeNw/company-background_10000/0?e=2159024400&v=beta&t=pCkWfQWoYOtrPSD6TQizWD1sx9oz43a8YV7dxjGo83s" style="display:block; margin:auto;" width="450" height="125">
- <h1 style="color:#ffffff;">Introduction:</h1>
-   <p div style="text-align:center;color:#ffffff;">CHANG,CHIA-YUN</p>
-   <p div style="text-align:center;color:#ffffff;">I am born in Kaohsiung</p>
-   <p div style="text-align:center;color:#ffffff;">Graduated from Kaohsiung Municipal ChungShan Senior High School</p>
-   <p div style="text-align:center;color:#ffffff;">Currently studying at National Quemoy University.</p>
-<div style="border-top:1px dashed #cccccc;height: 1px;overflow:hidden"></div>
-<img src="https://www.nasa.gov/sites/default/files/styles/1x1_cardfeed/public/images/746963main_pia17009-full_full.jpg" style="float:right;" width="168" height="138" />
-<h2 style="color:#ffffff;">Interest:</h2>
+<body>
+<img src="https://media-exp1.licdn.com/dms/image/C4E1BAQGNHAbH2lBeNw/company-background_10000/0?e=2159024400&v=beta&t=pCkWfQWoYOtrPSD6TQizWD1sx9oz43a8YV7dxjGo83s" width="450" height="125">
+ <h1>Introduction:</h1>
+   <p>CHANG,CHIA-YUN</p>
+   <p>I am born in Kaohsiung</p>
+   <p>Graduated from Kaohsiung Municipal ChungShan Senior High School</p>
+   <p>Currently studying at National Quemoy University.</p>
+<div></div>
+<img class="line" src="https://www.nasa.gov/sites/default/files/styles/1x1_cardfeed/public/images/746963main_pia17009-full_full.jpg" width="168" height="138">
+<h2>Interest:</h2>
 <ol>
-   <li div style="color:#ffffff;">Make some dessert.</li>
-   <li div style="color:#ffffff;">Play volleyball.</li>
-   <li div style="color:#ffffff;">Listen music ex. GEM. Taylor Swift ...</li>
+   <li>Make some dessert.</li>
+   <li>Play volleyball.</li>
+   <li>Listen music ex. GEM. Taylor Swift ...</li>
 </ol>
 <hr>
-<a href="https://www.facebook.com"><img src="https://static.techspot.com/images2/downloads/topdownload/2015/06/facebook-lite.png" border="0" style="display:block; margin:auto;"width="50" height="50"></a>
+<a href="https://www.facebook.com"><img class="image" src="https://static.techspot.com/images2/downloads/topdownload/2015/06/facebook-lite.png",border="0" width="50" height="50"></a>
 <hr>
 <address>
  <p style="text-align:center;color:#ffffff;">Some people are worth melting for.</p>
