--- a/midterm/index.html
+++ b/midterm/index.html
@@ -30,7 +30,7 @@
  <h2>Origin:</h2>
  <p>The origin of the domestic dog includes the dog's evolutionary divergence from the wolf, its domestication, and its development into dog types and dog breeds. The dog is a member of the genus Canis, which forms part of the wolf-like canids, and was the first species and the only large carnivore to have been domesticated. The dog and the extant gray wolf are sister taxa, as modern wolves are not closely related to the population of wolves that was first domesticated.</p></br>
  <div class="line"></div>
- <pre>  If you want to learn more about different breeds of dogs.</pre>
- <pre>  Please click the diamond in the upper left corner.</pre>
+ <p>If you want to learn more about different breeds of dogs.</p></br>
+ <p>Please click the diamond in the upper left corner.</p>
 </body>
 </html> 
