--- a/final/index.html
+++ b/final/index.html
@@ -8,22 +8,25 @@
 <body>
  <div id="mySidenav" class="sidenav">
   <a href="javascript:void(0)" class="closebtn" onclick="closeNav()">&times;</a>
-  <a href="https://chia-yun-chang.github.io/wp108b/1/hw.html" target="_blank">About</a> 
-  <a href="">Menu</a>
-
+  <a href="#" target="_blank">Instructions</a> 
+  <a href="#">Shut down</a>
  </div>
  <div class="dropdown" style="float:right">
-    <button onclick="myFunction()" class="dropbtn">More</button>
+    <button onclick="myFunction()" class="dropbtn">Leave</button>
     <div id="myDropdown" class="dropdown-content">
       <a href="#login">Log in</a>
       <a href="#logout">Log out</a>
-      <a href="#signup">Sign up</a>
     </div>
-  </div>
-  
+ </div>
  <span onclick="openNav()">&#9826;</span>
  <script src="./index.js" type="text/javascript"></script>
  <div class="line"></div>
- 
+
+ <div id="sitebody">
+    　<div id="sidebar_left"></div>
+    　<div id="sidebar_right"></div>
+    　<div id="content"></div>
+    　<div id="footer"></div>
+</div>
 </body>
 </html> 
