--- a/final/index.html
+++ b/final/index.html
@@ -25,8 +25,18 @@
  <div id="sitebody">
     　<div id="sidebar_left"></div>
     　<div id="sidebar_right"></div>
-    　<div id="content"></div>
+     <div id="content" >
+      <table style="width:300" border="1" border-color="#cccccc"></table>
+        <tr>
+          <td>第一個欄位</td>
+          <td>第二個欄位</td>
+        </tr>
+      </table>
+     </div>
     　<div id="footer"></div>
 </div>
+<tr>
+  <td colspan="4">
+</tr>
 </body>
 </html> 
