--- a/final/index.html
+++ b/final/index.html
@@ -8,35 +8,54 @@
 <body>
  <div id="mySidenav" class="sidenav">
   <a href="javascript:void(0)" class="closebtn" onclick="closeNav()">&times;</a>
-  <a href="#" target="_blank">Instructions</a> 
-  <a href="#">Shut down</a>
+  <a href="#" style="float: left;">Instructions</a> 
+  <a href="#" style="float: left;">Shut down</a>
  </div>
  <div class="dropdown" style="float:right">
-    <button onclick="myFunction()" class="dropbtn">Leave</button>
+  <button onclick="myFunction()" class="dropbtn">Leave</button>
     <div id="myDropdown" class="dropdown-content">
       <a href="#login">Log in</a>
       <a href="#logout">Log out</a>
     </div>
  </div>
  <span onclick="openNav()">&#9826;</span>
+ <script src="jquery.js"></script>
  <script src="./index.js" type="text/javascript"></script>
  <div class="line"></div>
-
  <div id="sitebody">
-    　<div id="sidebar_left"></div>
-    　<div id="sidebar_right"></div>
-     <div id="content" >
-      <table style="width:300" border="1" border-color="#cccccc"></table>
-        <tr>
-          <td>第一個欄位</td>
-          <td>第二個欄位</td>
-        </tr>
-      </table>
-     </div>
-    　<div id="footer"></div>
+    <div id="sidebar_left">
+     <a class="Bton1">1</a>
+     <a class="Bton2">2</a>
+     <a class="Bton3">3</a>
+     <a class="Bton4">4</a>
+     <a class="Bton5">5</a>
+    </div>
+    <div id="sidebar_right">
+     <a class="Btona">1</a>
+     <a class="Btonb">2</a>
+     <a class="Btonc">3</a>
+     <a class="Btond">4</a>
+     <a class="Btone">5</a>
+     <a class="Btonf">6</a>
+     <a class="Btong">7</a>
+     <a class="Btonh">8</a>
+     <a class="Btoni">9</a>
+     <a class="Btonj">0</a>
+     <a class="Btonk">00</a>
+     <a class="Btonl">.</a>
+     <a class="checkout">checkout</a>
+    </div>
+    <div id="content" >
+      <p id="demo"></p>
+    </div>
+    <div id="footer">
+     <a class="cofe1" onclick="Function1()">1</a>
+     <a class="cofe2">2</a>
+     <a class="cofe3">3</a>
+     <a class="cofe4">4</a>
+     <a class="cofe5">5</a>
+    </div>
 </div>
-<tr>
-  <td colspan="4">
-</tr>
+
 </body>
-</html> 
+</html>
