--- a/final/index.html
+++ b/final/index.html
@@ -5,7 +5,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link href="index.css" rel="stylesheet" type ="text/css">
 </head>
-<body>
+<body> 
  <div id="mySidenav" class="sidenav">
   <a href="javascript:void(0)" class="closebtn" onclick="closeNav()">&times;</a>
   <a href="#" style="float: left;">Instructions</a> 
@@ -19,43 +19,44 @@
     </div>
  </div>
  <span onclick="openNav()">&#9826;</span>
- <script src="jquery.js"></script>
  <script src="./index.js" type="text/javascript"></script>
  <div class="line"></div>
+
  <div id="sitebody">
     <div id="sidebar_left">
-     <a class="Bton1">1</a>
-     <a class="Bton2">2</a>
-     <a class="Bton3">3</a>
-     <a class="Bton4">4</a>
-     <a class="Bton5">5</a>
+     <button class="Bton1"onclick="Function1()">1</button>
+     <button class="Bton2">2</button>
+     <button class="Bton3">3</button>
+     <button class="Bton4">4</button>
+     <button class="Bton5">5</button>
     </div>
+
     <div id="sidebar_right">
-     <a class="Btona">1</a>
-     <a class="Btonb">2</a>
-     <a class="Btonc">3</a>
-     <a class="Btond">4</a>
-     <a class="Btone">5</a>
-     <a class="Btonf">6</a>
-     <a class="Btong">7</a>
-     <a class="Btonh">8</a>
-     <a class="Btoni">9</a>
-     <a class="Btonj">0</a>
-     <a class="Btonk">00</a>
-     <a class="Btonl">.</a>
-     <a class="checkout">checkout</a>
+     <button class="Btona">1</button>
+     <button class="Btonb">2</button>
+     <button class="Btonc">3</button>
+     <button class="Btond">4</button>
+     <button class="Btone">5</button>
+     <button class="Btonf">6</button>
+     <button class="Btong">7</button>
+     <button class="Btonh">8</button>
+     <button class="Btoni">9</button>
+     <button class="Btonj">0</button>
+     <button class="Btonk">00</button>
+     <button class="Btonl">.</button>
+     <button class="checkout">checkout</button>
     </div>
+
     <div id="content" >
-      <p id="demo"></p>
+     <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn%3AANd9GcSSovkOnX-3OQIXqyZ3oAl_1NNwghbYeIuvmhvDgEyy9MKC-5un&usqp=CAU" width="190" height="150">
+     <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn%3AANd9GcSHr5Zpm_a2ePwomiGexUm0i8iQ8ABfIrMT_xOgDNP5On_BuLnA&usqp=CAU" width="180" height="150">
+     <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn%3AANd9GcRAAgdWeyaM5MfK4aUY4pBfQlmfRd5L-m156k9ta4_n_g6vnKEx&usqp=CAU" width="180" height="150">
+     <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn%3AANd9GcTxNAsW4bGAITGMuYOoCk78lqvFDm5fwsNGD0UfS0FCIIkl4LG2&usqp=CAU" width="180" height="140">
+     <img src="https://b.ecimg.tw/items/DEAT17A40921338/000001_1518149878.jpg" width="180" height="140">
+     <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn%3AANd9GcSFI6G5vton38vqiMn2ebpXDK7IvbIaZc5Yah5cNs4oRnO_qdap&usqp=CAU" width="180" height="140">
     </div>
     <div id="footer">
-     <a class="cofe1" onclick="Function1()">1</a>
-     <a class="cofe2">2</a>
-     <a class="cofe3">3</a>
-     <a class="cofe4">4</a>
-     <a class="cofe5">5</a>
-    </div>
-</div>
 
+    </div>
 </body>
 </html>
