--- a/final/index.html
+++ b/final/index.html
@@ -48,15 +48,20 @@
     </div>
 
     <div id="content" >
-     <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn%3AANd9GcSSovkOnX-3OQIXqyZ3oAl_1NNwghbYeIuvmhvDgEyy9MKC-5un&usqp=CAU" width="190" height="150">
-     <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn%3AANd9GcSHr5Zpm_a2ePwomiGexUm0i8iQ8ABfIrMT_xOgDNP5On_BuLnA&usqp=CAU" width="180" height="150">
-     <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn%3AANd9GcRAAgdWeyaM5MfK4aUY4pBfQlmfRd5L-m156k9ta4_n_g6vnKEx&usqp=CAU" width="180" height="150">
-     <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn%3AANd9GcTxNAsW4bGAITGMuYOoCk78lqvFDm5fwsNGD0UfS0FCIIkl4LG2&usqp=CAU" width="180" height="140">
-     <img src="https://b.ecimg.tw/items/DEAT17A40921338/000001_1518149878.jpg" width="180" height="140">
-     <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn%3AANd9GcSFI6G5vton38vqiMn2ebpXDK7IvbIaZc5Yah5cNs4oRnO_qdap&usqp=CAU" width="180" height="140">
+     <input type="image" src="https://encrypted-tbn0.gstatic.com/images?q=tbn%3AANd9GcSSovkOnX-3OQIXqyZ3oAl_1NNwghbYeIuvmhvDgEyy9MKC-5un&usqp=CAU" width="190" height="150" onclick="Function1();">
+     <input type="image" src="https://encrypted-tbn0.gstatic.com/images?q=tbn%3AANd9GcSHr5Zpm_a2ePwomiGexUm0i8iQ8ABfIrMT_xOgDNP5On_BuLnA&usqp=CAU" width="180" height="150" onclick="Function2();">
+     <input type="image" src="https://encrypted-tbn0.gstatic.com/images?q=tbn%3AANd9GcRAAgdWeyaM5MfK4aUY4pBfQlmfRd5L-m156k9ta4_n_g6vnKEx&usqp=CAU" width="180" height="150" onclick="Function3();">
+     <input type="image" src="https://encrypted-tbn0.gstatic.com/images?q=tbn%3AANd9GcTxNAsW4bGAITGMuYOoCk78lqvFDm5fwsNGD0UfS0FCIIkl4LG2&usqp=CAU" width="180" height="140" onclick="Function4();">
+     <input type="image" src="https://b.ecimg.tw/items/DEAT17A40921338/000001_1518149878.jpg" width="180" height="140" onclick="Function5();">
+     <input type="image" src="https://encrypted-tbn0.gstatic.com/images?q=tbn%3AANd9GcSFI6G5vton38vqiMn2ebpXDK7IvbIaZc5Yah5cNs4oRnO_qdap&usqp=CAU" width="180" height="140" onclick="Function6();">
     </div>
     <div id="footer">
-
+      <p id="dog"></p>
+      <p id="trash"></p>
+      <p id="toy"></p>
+      <p id="birdcage"></p>
+      <p id="patting"></p>
+      <p id="mug"></p>
     </div>
 </body>
 </html>
