--- a/final/index.html
+++ b/final/index.html
@@ -24,7 +24,7 @@
 
  <div id="sitebody">
     <div id="sidebar_left">
-     <button class="Bton1"onclick="Function1()">1</button>
+     <button class="Bton1">1</button>
      <button class="Bton2">2</button>
      <button class="Bton3">3</button>
      <button class="Bton4">4</button>
